# scdata

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  ssh  test.ipynb  test.py
docs/: benchmark-report.md  blosc-lz4-native-refactor.md  layers-support-refactor.md
examples/: dataloader_multi_dataset.ipynb
rust/scdata/: Cargo.toml
rust/scdata/benches/: codec_manifest.rs  codec_matrix.rs  databank.rs  fullchain.rs  iopool.rs  modules.rs  profile.rs  stress.rs
rust/scdata/benches/support/: backends.rs  chunks.rs  codecs.rs  data.rs  manifest.rs  mod.rs
rust/scdata/examples/: iopool_bench.rs
rust/scdata/src/: lib.rs  pybind.rs  synthetic.rs
rust/scdata/src/access/: README.md  backend.rs  cache.rs  cpu.rs  error.rs  inflight.rs  key.rs  membudget.rs  mod.rs  profile.rs  scheduled.rs  scheduler.rs  slice.rs
rust/scdata/src/codecs/: README.md  buffer.rs  error.rs  mod.rs  pipeline.rs  pool.rs  profile.rs  registry.rs  runner.rs  spec.rs  util.rs
rust/scdata/src/codecs/impls/: crc32.rs  identity.rs  lz4.rs  mod.rs  stream.rs  unsupported.rs  zstd.rs
rust/scdata/src/codecs/impls/blosc/: header.rs  lz4_fast.rs  mod.rs  shuffle.rs
rust/scdata/src/databank/: README.md  adapter.rs  array.rs  batch.rs  compute.rs  config.rs  dataset.rs  direct.rs  error.rs  gene_axis.rs  interner.rs  mod.rs  plan.rs  profile.rs  registry.rs  util.rs
rust/scdata/src/databank/array/: codec.rs  dtype.rs  grid.rs  mod.rs  spec.rs  storage.rs  tests.rs
rust/scdata/src/databank/batch/: mod.rs  tests.rs
rust/scdata/src/databank/dense/: access.rs  group.rs  load.rs  mod.rs  scatter.rs  types.rs
rust/scdata/src/databank/native/: executor.rs  item.rs  load.rs  metadata.rs  mod.rs  planner.rs
rust/scdata/src/databank/scheduled/: assemble.rs  mod.rs  native_access.rs  planner.rs  producer.rs  profile.rs  types.rs
rust/scdata/src/databank/sparse/: aot.rs  load.rs  memory.rs  mod.rs  planning.rs  scatter.rs  types.rs
rust/scdata/src/iopool/: README.md  mod.rs  profile.rs  threaded.rs  uring.rs
rust/scdata/src/profile/: config.rs  counter.rs  disabled_tests.rs  flag.rs  ids.rs  macros.rs  metric.rs  mod.rs  registry.rs  runtime.rs  snapshot.rs  tests.rs  timer.rs
rust/scdata/src/pybind/: arrays.rs  config.rs  databank.rs  dispatch.rs  dtype.rs  errors.rs  ids.rs  index.rs  mod.rs  prefetch.rs  profile.rs  zip.rs
scdata/: __init__.py  _scdata.pyi  corpus.py  databank.py
scripts/: bench_compression.py  bench_compression.sh  benchmark_zarrzip_random_access.py  convert_10x_dirs_to_zarrzip.py  convert_cellxgene_h5ad_to_zarrzip.py  (+1 more)
(+22 files in other folders)
