[package]
name = "scdata-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "Rust core for the scdata Python package"
publish = false

[lib]
name = "_scdata"
crate-type = ["cdylib", "rlib"]

[features]
default = ["uring", "python-extension"]
uring = ["dep:io-uring"]
python-extension = ["pyo3/extension-module"]
pybind-bench = ["pyo3/auto-initialize"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["abi3-py310"] }
numpy = "0.23"
flume = "0.11"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
core_affinity = "0.8"
libc = "0.2"
thiserror = "2"
serde_json = "1"
zstd = "0.13"
flate2 = "1"
lz4_flex = "0.11"
lz4-sys = "1.11.1"
bzip2 = "0.5"
xz2 = "0.1"
crc32fast = "1"
blosc-src = { version = "0.3.8", features = ["lz4", "snappy", "zlib", "zstd"] }
io-uring = { version = "0.7", optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
# io-uring is Linux-only; on other platforms always use threaded backend

[[bench]]
name = "modules"
path = "benches/modules.rs"
harness = false

[[bench]]
name = "iopool"
path = "benches/iopool.rs"
harness = false

[[bench]]
name = "codec_manifest"
path = "benches/codec_manifest.rs"
harness = false

[[bench]]
name = "stress"
path = "benches/stress.rs"
harness = false

[[bench]]
name = "fullchain"
path = "benches/fullchain.rs"
harness = false
